v2.6.4.4 - Sped up reading of openexr files (specially the first of a sequence).
	 - Bug fixed OpenEXR stereo crossed not respecting dataWindows 
	   correctly.
v2.6.4.3 - Updated all platforms to OpenEXR 2.2.
v2.6.4.2 - Added missing ctl and shaders directory to win64 release.
	 - Added missing rails directory to win64 release.
	 - Added HISTORY.txt and Videos.txt to win64 release.
	 - Added docs to win64 release.
	 - Restored glDrawPixels opengl drawing albeit buggy but needed for
	   old gfx cards.
	 - Updated version from v2.6.4.0.
v2.6.4.1 - Made autofit work in EDL timeline when switching images.
	 - Fixed loading of a single image which would always load all images
	   in a sequence.
	 - Fixed BG image and wipe mode in network connections.
	 - Bug fixed color area window selection in stereo and added a square
	   displaying the mean color in the color info window.
	 - Updated to OpenEXR 2.2 on Linux.  Windows is stuck with 2.1.
	 - Updated -h (help) command-line on windows to pop up a console with
	   instructions.
v2.6.4.0 - Added a starting audio volume preference to the default 
	   audio preferences.
	 - Made preferences run when the user hits ok.  Previously ok did
	   nothing.  This allows testing preferences much easier.
	 - Pixel Info is now available for background images even when those
	   background images have a different size than the foreground one.
	   Note that Color Info Selection shows only the foreground image 
	   values.
	 - Bug fixed file requester when clicking with rmb on a folder 
	   which would access the folder instead of the menus.
	 - EXR images with data windows are now saved keeping the data and
	   display window if saved as EXR.
	 - GUI for OpenEXR and ImageMagick image options.  Allows selecting
	   compression and pixel type.
v2.6.3.4 - Bug fixed thumbnails on sequences in file requester.
	 - Bug fixed some remote image problems including one incorrect 
	   log out.