@@ -288,6 +288,11 @@ class CMedia
     // Add default Color, Red, Green, Blue, Alpha, Overlay, Lumma layers
     void default_layers();
 
+    mrv::Recti& data_window(boost::int64_t f = AV_NOPTS_VALUE);
+    mrv::Recti& display_window(boost::int64_t f = AV_NOPTS_VALUE);
+    mrv::Recti& data_window2(boost::int64_t f = AV_NOPTS_VALUE);
+    mrv::Recti& display_window2(boost::int64_t f = AV_NOPTS_VALUE);
+
     const mrv::Recti& data_window( boost::int64_t f = AV_NOPTS_VALUE) const;
     const mrv::Recti& display_window( boost::int64_t f = AV_NOPTS_VALUE) const;
     const mrv::Recti& data_window2(boost::int64_t f = AV_NOPTS_VALUE) const;
