@@ -1,6 +1,8 @@
 v2.6.4.4 - Sped up reading of openexr files (specially the first of a sequence).
 	 - Bug fixed OpenEXR stereo crossed not respecting dataWindows 
 	   correctly.
+	 - Bug fixed Single Instance to load images that are fed thru another
+	   instance of viewer.
 v2.6.4.3 - Updated all platforms to OpenEXR 2.2.
 v2.6.4.2 - Added missing ctl and shaders directory to win64 release.
 	 - Added missing rails directory to win64 release.
